--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "antd": "^5.6.3",
+    "axios": "^1.4.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
