--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@reduxjs/toolkit": "1.9.5",
     "antd": "^5.6.3",
     "axios": "^1.4.0",
+    "country-list": "^2.3.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-merge-refs": "^2.0.2",
     "react-redux": "8.1.0"
   },
   "devDependencies": {
+    "@types/country-list": "^2.1.1",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
