--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.2",
-    "react-redux": "8.1.0"
+    "react-redux": "8.1.0",
+    "web3": "1.7.4",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
     "@types/country-list": "^2.1.1",
