--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "country-list": "^2.3.0",
+    "dayjs": "^1.11.9",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-json-view": "1.21.3",
     "react-merge-refs": "^2.0.2",
     "react-redux": "8.1.0",
-    "react-json-view": "1.21.3",
     "web3": "1.7.4",
     "web3modal": "^1.9.9"
   },
